# nextup

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  team.txt
.github/workflows/: cargo-publish.yaml.yml  update-homebrew-formula.yaml
src/: app.rs  config.rs  error.rs  main.rs  ui.rs
